deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray
spec:
  selector:
    app: xray
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
  type: ClusterIP
